<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:id="@+id/menu_top"
        android:checkableBehavior="none">
        <item
            android:id="@+id/schoolwebsitemenu"
            android:icon="@drawable/ic_event_note_black_24dp"
            android:title="@string/school_website" />
    </group>

    <group
        android:id="@+id/menu_mid"
        android:checkableBehavior="none">

        <item
            android:id="@+id/exams"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/exams_activity_title" />
        <item
            android:id="@+id/teachers"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/teachers" />

    </group>

    <group
        android:id="@+id/menu_down"
        android:checkableBehavior="none">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/aboutus"
            android:icon="@drawable/info_mark"
            android:title="@string/about_us" />

    </group>
</menu>
